# FilesContentSearcher

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
CMakeModules/: AddWarningFlags.cmake  CodeCoverage.cmake
src/: FileSearch.cpp  FileSearch.hpp
src/thread_pool/: .clang-tidy  thread_pool.hpp
test/: CMakeLists.txt  e2e.cpp
test/testDir/: hasName.text  noName.text
